<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- tab layout -->
    <string name="list_tab">List</string>
    <string name="map_tab">Map</string>

    <!-- Toolbar menu -->
    <string name="menu_add">Add</string>
    <string name="menu_save">Save</string>
    <string name="toolbar_title_add_property">Add property</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="toolbar_title_property_details">Property details</string>

    <!-- Points of interest-->
    <string name="poi_school">School</string>
    <string name="poi_grocery">Grocery</string>
    <string name="poi_park">Park</string>
    <string name="poi_public_transport">Public transport</string>
    <string name="poi_swimming_pool">Swimming pool</string>
    <string name="poi_fitness_club">Fitness club</string>
    <string name="poi_parking">Parking</string>

    <!-- Property Types -->
    <string name="pt_flat">Flat</string>
    <string name="pt_house">House</string>
    <string name="pt_duplex">Duplex</string>
    <string name="pt_triplex">Triplex</string>
    <string name="pt_penthouse">Penthouse</string>
    <string name="pt_manor">Manor</string>
    <string name="pt_land">Land</string>
    <string name="pt_ranch">Ranch</string>
    <string name="pt_private_island">Private Island</string>

    <!-- To sort -->
    <string name="property_picture">Property picture</string>
    <string name="media">Media</string>
    <string name="property_location">Property location</string>
    <string name="bedrooms_amount">Bedrooms</string>
    <string name="bathrooms_amount">Bathrooms</string>
    <string name="rooms_amount">Rooms</string>
    <string name="surface">Surface</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="post_date">Post date</string>
    <string name="sold_date">Sold date</string>
    <string name="real_estate_agent">Agent</string>
    <string name="point_of_interest">Points of interest</string>
    <string name="property_type">Property type</string>
    <string name="price">Price</string>
    <string name="dollar_symbol">$</string>
    <string name="dollar">Dollar</string>
    <string name="euro_symbol">€</string>
    <string name="euro">Euro</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="sq_ft">sq ft</string>
    <string name="m2">m²</string>
    <string name="add_media">Add media</string>
    <string name="edit">Edit</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="address_line_2_optional">Address line 2 (Optional)</string>
    <string name="locate_me">Locate me</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_permission_denied_dialog_message">If you change your mind, you can allow this app to get your location in phone settings.</string>
    <string name="location_request">Location needed</string>
    <string name="location_request_dialog_message">Your location is needed to locate you on the map, do you allow this app to use your location?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="an_error_append">An error append</string>
    <string name="you_re_not_connected_to_internet">You\'re not connected to internet</string>
    <string name="the_property_will_be_uploaded_when_connected">The property will be uploaded when connected</string>
    <string name="error_creating_folder">An error append when creating folder</string>
    <string name="error_saving_file">Error when saving file</string>
    <string name="error_opening_camera">Error when opening camera</string>
    <string name="capture">Capture photo</string>
    <string name="gallery">Gallery</string>
    <string name="check">Check</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="record">Record</string>
    <string name="capture_picture">Capture picture</string>
    <string name="add_description">Add description</string>
    <string name="remove_media">Remove media</string>
    <string name="please_add_a_description">Please add a description</string>
    <string name="please_add_a_picture_or_a_video">Please add a picture or a video</string>
    <string name="price_amount">price</string>
    <string name="bedroom_amount">bedroom amount</string>
    <string name="bathroom_amount">bathroom amount</string>
    <string name="room_amount">room amount</string>
    <string name="surface_amount">surface</string>
    <string name="please_enter_between">Please enter a %s between 0 and %d</string>
    <string name="channel_name">Uploads</string>
    <string name="channel_description">Upload notification channel</string>
    <string name="notification_title">Uploads done!</string>
    <string name="all_properties_has_been_uploaded">All properties has been uploaded!</string>
    <string name="select_sold_date">Select sold date</string>
    <string name="select_estates_posted_since">Select estates posted since</string>
    <string name="select_estates_sold_since">Select estates sold since</string>
    <string name="add_property">Add a property</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="unit">Unit</string>
    <string name="sold">SOLD!</string>
    <string name="open_date_picker">Open date picker</string>
    <string name="clear_date_picker">Clear date picker</string>
    <string name="filter">Filter</string>
    <string name="increase_room_amount">Increase room amount</string>
    <string name="decrease_room_amount">Decrease room amount</string>
    <string name="filters">Filters</string>
    <string name="types_title">Types :</string>
    <string name="price_range_title">Price range :</string>
    <string name="surface_range_title">Surface range :</string>
    <string name="rooms_title">Rooms :</string>
    <string name="bathrooms_title">Bathrooms :</string>
    <string name="bedrooms_title">Bedrooms :</string>
    <string name="_0">0</string>
    <string name="point_of_interest_title">Points of interest :</string>
    <string name="post_date_title">Post date :</string>
    <string name="available_since">Available since</string>
    <string name="sold_since">Sold since</string>
    <string name="medias_title">Medias :</string>
    <string name="_1">1</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset_filters">Reset filters</string>
    <string name="clear_text_field">Clear text field</string>
    <string name="sold_title">Sold :</string>
    <string name="available_title">Available :</string>
    <string name="remove_filters">Remove filters</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply_settings">Apply settings</string>

</resources>
