<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/list_activity_filter_menu"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="collapseActionView|ifRoom">
    </item>
    <item android:id="@+id/list_activity_settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView|ifRoom">
    </item>
</menu>