<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListFragment"
    android:id="@+id/fragment_list_srl">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_list_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_list_item"/>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>